add primitive business logic

--- a/frontend/src/app/pizza-order-overview/pizza-order-overview.component.html
+++ b/frontend/src/app/pizza-order-overview/pizza-order-overview.component.html
@@ -1,6 +1,25 @@
-Hello
+<h1>Pizza Order Overview</h1>
 
-<p>
-  pizza-order-overview works!
-</p>
+<div *ngIf="pizzaOrders">
 
+  <div class="pizza-order" *ngFor="let pizzaOrder of pizzaOrders">
+    <div>
+
+      <div><b>Order-Id:</b> {{pizzaOrder.orderId}}</div>
+      <div><b>Status:</b> {{pizzaOrder.orderStatus}}</div>
+      <ul>
+        <li *ngFor="let orderItem of pizzaOrder.orderItems">
+          {{orderItem.quantity}} x {{orderItem.name}}
+        </li>
+      </ul>
+
+      <div>
+        <button *ngIf="isOrderEditable(pizzaOrder)">Edit Order</button>
+        <button class="cancel-btn" *ngIf="isOrderCancellable(pizzaOrder)" (click)="cancelPizzaOrder(pizzaOrder)">Cancel Order</button>
+        <span *ngIf="noMoreChangesAllowed(pizzaOrder)"><b>No more changes allowed!</b></span>
+      </div>
+
+    </div>
+
+  </div>
+</div>
